<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">News</string>
    <string name="button_search_news">Button: search news</string>
    <string name="search_latest_news" tools:ignore="TypographyEllipsis">
        Search Latest News...</string>
    <string name="button_open_favorite_news">Button: open favorite news</string>
    <string name="author">Author</string>
    <string name="_01_january_1990">01 January 1990</string>
    <string name="title">Title</string>
    <string name="desc">Desc</string>
    <string name="source">Source</string>
    <string name="imgView">imgView</string>
    <string name="image_backdrop">Image: backdrop</string>
    <string name="image_top_shadow">Image: top shadow</string>
    <string name="image_bot_shadow">Image: bot shadow</string>
    <string name="image_calendar">Image: calendar</string>
    <string name="image_add_to_favorite">Image: add to favorite</string>
    <string name="image_open_news_in_browser">Image: open news in browser</string>
    <string name="image_share_news">Image: share news</string>
    <string name="image_favorite">Image: favorite</string>
    <string name="favorites">Favorites</string>
    <string name="image_not_found_photo_to_news">Image: not found photo to news</string>
    <string name="image_not_found_sorry">Image not found, sorry</string>
    <string name="permissions_denied_to_save_pictures">Permissions denied to save pictures</string>
    <string name="tap_to_change">Tap to change</string>
</resources>
