<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="7dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground">

            <ImageView
                android:id="@+id/imgV"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/imgView"
                android:scaleType="centerCrop"
                tools:ignore="UnusedAttribute" />

            <ImageView
                android:id="@+id/imgShadow"
                android:layout_width="match_parent"
                android:layout_height="800dp"
                android:layout_alignBottom="@+id/imgV"
                android:contentDescription="@string/imgView"
                android:src="@drawable/bottom_shadow" />

            <ImageView
                android:id="@+id/imgNotFound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:contentDescription="@string/image_not_found_photo_to_news"
                android:src="@drawable/ic_image_white"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/progressLoadPhoto"
                style="@android:style/Widget.ProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvAuthor"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignStart="@+id/tvTitle"
                android:layout_alignTop="@+id/layoutDate"
                android:layout_toStartOf="@+id/layoutDate"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/author"
                android:textColor="@android:color/white" />

            <FrameLayout
                android:id="@+id/layoutDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgV"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="-30dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/round_white"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/imgCal"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:contentDescription="@string/imgView"
                    android:src="@drawable/ic_date_range_black_48dp" />

                <TextView
                    android:id="@+id/tvPublishedAt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="27dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/_01_january_1990"
                    android:textColor="@android:color/black" />

            </FrameLayout>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgV"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/title"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_below="@+id/tvTitle"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="16dp"
                android:text="@string/desc" />

            <TextView
                android:id="@+id/tvSource"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_below="@+id/tvDesc"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:drawablePadding="10dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-light"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/source"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>