<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    tools:context=".presentation.view.DetailActualActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:fitsSystemWindows="true"
        android:theme="@style/MyAppBarLayoutTheme">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <ImageView
                android:id="@+id/imgBackdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image_backdrop"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:transitionName="img"
                app:layout_collapseMode="parallax"
                tools:ignore="UnusedAttribute" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:fitsSystemWindows="true"
                android:orientation="vertical"
                app:layout_collapseMode="pin">

                <ImageView
                    android:id="@+id/imgTopShadow"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:contentDescription="@string/image_top_shadow"
                    android:scaleType="centerCrop"
                    android:src="@drawable/top_shadow" />

                <ImageView
                    android:id="@+id/imgBotShadow"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_alignParentBottom="true"
                    android:contentDescription="@string/image_bot_shadow"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bottom_shadow" />

            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:contentInsetStart="0dp"
                android:contentInsetLeft="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/appbarTitle"
                        style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_toStartOf="@+id/imgShare"
                        android:drawablePadding="10dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="18sp"
                        tools:text="News for you" />

                    <TextView
                        android:id="@+id/appbarSubtitle"
                        style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/appbarTitle"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="5dp"
                        android:layout_toStartOf="@+id/imgShare"
                        android:drawablePadding="10dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="12sp"
                        tools:text="Subtitle" />

                    <ImageView
                        android:id="@+id/imgShare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:layout_toStartOf="@+id/imgOpenInBrowser"
                        android:contentDescription="@string/image_share_news"
                        android:src="@drawable/ic_share_white" />


                    <ImageView
                        android:id="@+id/imgOpenInBrowser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:layout_toStartOf="@+id/imgAddToFavorite"
                        android:contentDescription="@string/image_open_news_in_browser"
                        android:src="@drawable/ic_open_in_browser_white" />

                    <ImageView
                        android:id="@+id/imgAddToFavorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:contentDescription="@string/image_add_to_favorite"
                        android:src="@drawable/ic_favorite_white" />

                </RelativeLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:fitsSystemWindows="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="0dp"
                app:cardElevation="@dimen/cardview_default_elevation"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:ignore="PrivateResource">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:textColor="@color/colorTextTitle"
                        android:textSize="19sp"
                        android:textStyle="bold"
                        tools:text="Title of News" />

                    <TextView
                        android:id="@+id/tvBriefInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_below="@id/tvTitle"
                        android:layout_marginTop="10dp"
                        android:drawablePadding="10dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:singleLine="true"
                        tools:text="a time ago" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="0dp"
                app:cardElevation="@dimen/cardview_default_elevation"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:ignore="PrivateResource">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ProgressBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:layout_marginBottom="70dp"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

                    <WebView
                        android:id="@+id/webView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/dateBehavior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="5dp"
        android:adjustViewBounds="true"
        android:background="@drawable/round_white"
        android:clickable="false"
        android:padding="5dp"
        app:behavior_autoHide="true"
        app:layout_anchor="@+id/appBar"
        app:layout_anchorGravity="right|end|bottom"
        tools:ignore="UnusedAttribute">

        <ImageView
            android:id="@+id/imgCal"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/image_calendar"
            android:src="@drawable/ic_date_range_black_48dp" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginEnd="10dp"
            android:textColor="@android:color/black"
            tools:text="01 January 1990" />
    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>