<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ActualNewsFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresherLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RelativeLayout
                    android:id="@+id/searchPanel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary" >

                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:text="@string/app_name"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:ignore="RelativeOverlap"
                        android:padding="15dp"/>

                    <ImageButton
                        android:id="@+id/btnSearch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@null"
                        android:contentDescription="@string/button_search_news"
                        android:src="@drawable/ic_search_white"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:paddingEnd="15dp"
                        android:paddingRight="15dp"
                        android:paddingLeft="0dp"
                        android:paddingStart="0dp"/>

                    <ImageButton
                        android:id="@+id/btnCloseSearchView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@null"
                        android:contentDescription="@string/button_search_news"
                        android:src="@drawable/ic_close_white"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:paddingEnd="15dp"
                        android:paddingRight="15dp"
                        android:paddingLeft="0dp"
                        android:paddingStart="0dp"
                        android:visibility="gone"/>

                    <EditText
                        android:id="@+id/etSearch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_toStartOf="@+id/btnCloseSearchView"
                        android:layout_toLeftOf="@+id/btnCloseSearchView"
                        android:autofillHints="no"
                        android:gravity="center_vertical"
                        android:layout_toEndOf="@+id/tvTitle"
                        android:hint="@string/search_latest_news"
                        android:imeOptions="actionSearch"
                        android:inputType="text|textCapSentences"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:textSize="15sp"
                        android:theme="@style/EditTextTheme"
                        android:layout_toRightOf="@+id/tvTitle"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@+id/tvQuery"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_toStartOf="@+id/btnSearch"
                        android:layout_toLeftOf="@+id/btnSearch"
                        android:textColor="@android:color/white"
                        android:textSize="15sp"
                        tools:text="Sport"
                        android:layout_toEndOf="@+id/tvTitle"
                        android:layout_toRightOf="@+id/tvTitle"
                        android:visibility="gone"/>


                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/searchPanel"
                    android:layout_marginTop="5dp"
                    android:scrollbars="vertical" />

            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>